--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="/home/labuser/Desktop/Persistent_Folder/Lab3CV/Anirudh.jpg" alt="Your Photo" class="photo">
+            <img src="https://github.com/2021wa86929AnirudhGhosh/BITS-MTech/blob/2021wa86929AnirudhGhosh-CV-lab3/Anirudh.jpg" alt="Your Photo" class="photo">
             <h1>Anirudh Ghosh</h1>
             <p>Email: <a href="mailto:2021wa869292wilp.bits-pilani.ac.in">2021wa869292wilp.bits-pilani.ac.in</a></p>
         </header>
