--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </ul>
         </section>
  
-         <a href="https://github.com/2021wa86929AnirudhGhosh/BITS-MTech/new/2021wa86929AnirudhGhosh-CV-lab3"> <footer>
+         <a href="https://2021wa86929anirudhghosh.github.io/BITS-MTech/"> <footer>
             Hosted on Github </footer></a>
        
     </div>
