--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <section class="qualifications">
             <h2>Qualifications</h2>
             <ul>
-                <li>M/Tech in Computer Systems and Infrastructure - Birla Institute of Technology, Pilani </li>
+                <li>M.Tech in Computer Systems and Infrastructure - Birla Institute of Technology and Science, Pilani </li>
                 <li>Bachelor in Computer Application - Lucknow University</li>
                 
             </ul>
