--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="Anirudh.jpg" alt="Your Photo" class="photo">
+            <img src="http://proxy1.wipro.com=https://github.com/2021wa86929AnirudhGhosh/BITS-MTech/blob/28bd54fc7f3f6e7890e518afe83c9d1222c3701d/Anirudh.jpg" alt="Your Photo" class="photo">
             <h1>Anirudh Ghosh</h1>
             <p>Email: <a href="mailto:2021wa869292wilp.bits-pilani.ac.in">2021wa869292wilp.bits-pilani.ac.in</a></p>
         </header>
